[gd_scene load_steps=14 format=2]

[ext_resource path="res://theme/button_sfx.tscn" type="PackedScene" id=1]
[ext_resource path="res://title_screen/title_screen.gd" type="Script" id=2]
[ext_resource path="res://theme/pompy_ui.tres" type="Theme" id=3]
[ext_resource path="res://theme/font/pompy_sans_24.tres" type="DynamicFont" id=4]
[ext_resource path="res://transition_1.wav" type="AudioStream" id=5]
[ext_resource path="res://title_screen/background_splash.png" type="Texture" id=6]
[ext_resource path="res://title_screen/broken_ships.png" type="Texture" id=7]
[ext_resource path="res://title_screen/trip_wire.png" type="Texture" id=8]
[ext_resource path="res://title_screen/planet_escape.png" type="Texture" id=9]
[ext_resource path="res://prototype/transition/transition.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TabContainer/Background/VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "intro"
length = 20.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("TabContainer:current_tab")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 8, 12, 16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TabContainer/Background/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxEmpty" id=2]

[node name="TitleScreen" type="Popup"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "intro"
anims/RESET = SubResource( 3 )
anims/intro = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.0784314, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
tabs_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Background"]
margin_left = 258.0
margin_top = 109.0
margin_right = 446.0
margin_bottom = 224.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TabContainer/Background/VBoxContainer"]
margin_right = 188.0
margin_bottom = 48.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Space Cake"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Background/VBoxContainer"]
margin_top = 52.0
margin_right = 188.0
margin_bottom = 68.0
size_flags_vertical = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Background/VBoxContainer/HBoxContainer"]
margin_right = 179.0
margin_bottom = 16.0
text = "By HowYouDoing, Pompy and Travis Sullivan"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Background/VBoxContainer"]
margin_top = 72.0
margin_right = 188.0
margin_bottom = 76.0

[node name="CenterContainer" type="CenterContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/CenterContainer"]
margin_left = 254.0
margin_top = 142.0
margin_right = 258.0
margin_bottom = 146.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/CenterContainer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 258.0
margin_bottom = 166.0

[node name="Label" type="Label" parent="TabContainer/CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 16.0
text = "Long ago where the days human kind walked the earth. "
autowrap = true

[node name="TextureRect" type="TextureRect" parent="TabContainer/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 256.0
margin_bottom = 164.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="CenterContainer2" type="CenterContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/CenterContainer2"]
margin_left = 254.0
margin_top = 142.0
margin_right = 258.0
margin_bottom = 146.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/CenterContainer2/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 258.0
margin_bottom = 204.0

[node name="Label" type="Label" parent="TabContainer/CenterContainer2/PanelContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 54.0
text = "Now scattered all over the universe the aftermath of the Great Space War, the survivors scavenge the broken ships that litter the vast battlefield."
autowrap = true

[node name="TextureRect" type="TextureRect" parent="TabContainer/CenterContainer2/PanelContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 256.0
margin_bottom = 202.0
texture = ExtResource( 7 )
stretch_mode = 4

[node name="CenterContainer3" type="CenterContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/CenterContainer3"]
margin_left = 254.0
margin_top = 142.0
margin_right = 258.0
margin_bottom = 146.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/CenterContainer3/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 258.0
margin_bottom = 204.0

[node name="Label" type="Label" parent="TabContainer/CenterContainer3/PanelContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 54.0
text = "However, the hidden traps and maze-like corridors of the wreckage make the search for relics a perilous adventure in its own right."
autowrap = true

[node name="TextureRect" type="TextureRect" parent="TabContainer/CenterContainer3/PanelContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 256.0
margin_bottom = 202.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="CenterContainer4" type="CenterContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/CenterContainer4"]
margin_left = 254.0
margin_top = 142.0
margin_right = 258.0
margin_bottom = 146.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/CenterContainer4/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 258.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="TabContainer/CenterContainer4/PanelContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 54.0
rect_min_size = Vector2( 256, 0 )
text = "You are one of the many scavengers, searching for anything to remember the once-peacefull Planet Earth by.
And so begins..."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.0784314, 0.117647, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -33.0
margin_bottom = -13.0
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="HBoxContainer" groups=["pressed_sfx"]]
margin_left = 152.0
margin_right = 198.0
margin_bottom = 20.0
text = "Fullscreen "

[node name="Leaderbord" type="Button" parent="HBoxContainer" groups=["pressed_sfx"]]
margin_left = 210.0
margin_right = 257.0
margin_bottom = 20.0
text = "Leaderbord"

[node name="New" type="Button" parent="HBoxContainer" groups=["pressed_sfx"]]
margin_left = 269.0
margin_right = 290.0
margin_bottom = 20.0
text = "Play "

[node name="Credits" type="Button" parent="HBoxContainer" groups=["pressed_sfx"]]
margin_left = 302.0
margin_right = 332.0
margin_bottom = 20.0
text = "Credits"

[node name="Quit" type="Button" parent="HBoxContainer" groups=["pressed_sfx"]]
margin_left = 344.0
margin_right = 360.0
margin_bottom = 20.0
text = "Quit"

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -94.0
margin_top = -16.0
text = " v.3 - Godot Engine 3.4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSFX" parent="." instance=ExtResource( 1 )]

[node name="Transition" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Transition2" parent="." instance=ExtResource( 10 )]
next_scene = "res://credits/credits.tscn"

[connection signal="about_to_show" from="." to="." method="_on_TitleScreen_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_TitleScreen_popup_hide"]
[connection signal="ready" from="." to="." method="_on_TitleScreen_ready"]
[connection signal="pressed" from="HBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="HBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="HBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
